Make external id extra field, add internal ids.
